fixing the inputs align

--- a/css/queries.css
+++ b/css/queries.css
@@ -199,15 +199,17 @@
     margin-right: 0;
   }
 
-  .input-email,
-  .cta-container .large-btn {
-    margin-left: auto;
-    margin-right: auto;
-    
-  }
+  .cta-form-container {
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
   .input-email{
     margin-bottom: 3rem;
+    margin-right: 0;
   }
 }
 
